--- a/css/main.css
+++ b/css/main.css
@@ -235,6 +235,16 @@ h4 {
     font-size: 1.25rem;
 }
 
+.logo-img {
+    height: 48px;
+    width: auto;
+    object-fit: contain;
+}
+
+.footer-logo-img {
+    height: 80px;
+}
+
 .nav-links {
     display: flex;
     align-items: center;
