--- a/localmind/css/style.css
+++ b/localmind/css/style.css
@@ -222,6 +222,16 @@ h4 {
     color: var(--color-text);
 }
 
+.logo-img {
+    height: 48px;
+    width: auto;
+    object-fit: contain;
+}
+
+.footer-logo-img {
+    height: 80px;
+}
+
 .nav-links {
     display: flex;
     align-items: center;
